feat: Add script tag for main entry point
Includes the main application script tag in the `index.html` to ensure proper loading and execution of the React application.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
     "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24"
   }
@@ -88,5 +89,6 @@
 </head>
   <body class="bg-gray-950 text-white overflow-x-hidden antialiased selection:bg-brand-500 selection:text-white">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
